--- a/study-resources/playbooks/setup-app.yaml
+++ b/study-resources/playbooks/setup-app.yaml
@@ -3,13 +3,39 @@
 
   - hosts: webservers
     become: true
+
+    vars:
+      path_to_app: "/var/www/html"
+
+    vars_prompt:
+      - name: "upload_var"
+        prompt: "Upload the index.php file?"
+      - name: "create_var"
+        prompt: "Create info.php page?"
+
     tasks:
       - name: Upload application file
         copy:
           src: ./index.php
-          dest: /var/www/html
+          dest: "{{ path_to_app }}"
           mode: 0755
+        when: upload_var == 'yes'
       
+      - name: Create simple info page
+        copy:
+          dest: "{{ path_to_app }}/info.php"
+          content: "<h1>Info about our webserver {{ ansible_hostname }} </h1>"
+        when: create_var == 'yes'
+        tags: create
+      
+      - name: See directory contents
+        command: ls -la {{ path_to_app }}
+        register: dir_contents
+      
+      - name: Debug directory contents
+        debug: 
+          msg: "{{ dir_contents }}"
+
       - name: Configure php.ini file
         lineinfile:
           path: /etc/php.ini
